--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,12 @@
 .left{
     width: 726px;
     float: left;
+    overflow: hidden;
 }
 /*右边*/
 .right{
     width: 222px;
     float: left;
-    border: 1px solid #8a2be2;
 }
 /*首页列表*/
 .index_list{
@@ -92,6 +92,9 @@ h1{
     float:left;
     width: 640px;
 }
+.post-main .well{
+    width: 587px;
+}
 .post-cell-useful{
     border-color: #CCC;
     color: #777;
@@ -111,6 +114,18 @@ h1{
     text-align: center;
 }
 
+.post-cell-supply{
+    border-color: #CCC;
+    color: #777;
+    padding: 6px 6px 5px;
+    border: 1px solid #DDD;
+    border-bottom: 1px solid #CCC;
+    cursor: pointer;
+    text-align: right;
+    background-color: #F3F3F3;
+    margin-top: 5px;
+}
+
 .post-cell-nouse{
     border-color: #CCC;
     color: #777;
@@ -121,6 +136,7 @@ h1{
     cursor: pointer;
     text-align: right;
 }
+
 .post-cell-nouse span{
     border-bottom: 1px solid #DDDDDD;
     display: block;
@@ -129,7 +145,7 @@ h1{
 }
 .post-author{
     text-align: right;
-    width: 100%;
+    width: 624px;
 }
 .post-author span{
     background-color: #E0EAF1;
@@ -140,6 +156,7 @@ h1{
 .post-hr{
     clear: both;
     border: 1px solid #DDD;
+    margin-left: 15px;
 }
 .post-comment-clear{
     border: 1px solid #DDD;
@@ -149,4 +166,53 @@ h1{
 #editor{
     width:100%;
     height: 300px;
+}
+.post-question{
+    margin-bottom: 15px;
+    border-bottom: 2px solid #DDD;
+    padding-bottom: 15px;
+}
+/*补充*/
+.post-supply-zindex{
+    position: absolute;
+    z-index: 500;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #9E9E9E;
+    cursor: pointer;
+    opacity:0.3;
+    display:none;
+}
+.post-supply{
+    border-width: 10px;
+    width: 410px;
+    height: auto;
+    position: absolute;
+    z-index: 501;
+    top: 45%;
+    left: 45%;
+    background-color: #ffffff;
+    overflow: hidden;
+    padding: 5px;
+    display: none;
+}
+.post-supply textarea{
+    height: 200px;
+    width: 400px;
+}
+.post-supply-ul{
+    width: 590px;
+    float: right;
+    display: inline-block;
+    overflow: hidden;
+}
+.post-supply-ul li{
+    border: 1px dashed #4169e1;
+    margin-right: 13px;
+}
+.tag{
+    overflow: hidden;
+    width: 100%;
 }
